# exercise

backend/: .env  .gitignore  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/handlers/: authlogin.rs  authregister.rs  authuihome.rs  authuistatus.rs  mod.rs
backend/src/routes/: auth.rs  middlewares.rs  mod.rs
backend/src/utils/: random_id.rs
frontend/: bun.lockb  global.d.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/lib/: auth.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/ui/home/: page.tsx
frontend/src/app/admin/ui/home/dashboard/: page.tsx
frontend/src/app/admin/ui/home/dashboard/post/: page.tsx
frontend/src/app/admin/ui/home/dashboard/update/[id]/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/session/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/superadmin/: layout.tsx
frontend/src/components/: Icon.tsx  Login.tsx  Logout.tsx  Navbar.tsx
frontend/src/components/admin/: Navbar.tsx  Sidebar.tsx
frontend/src/components/home/: Dashboard.tsx  Event.tsx  Information.tsx  Service.tsx
frontend/src/components/superadmin/: Navbar.tsx  Sidebar.tsx
frontend/src/context/: AutoRefreshTokenWrapper.tsx  SessionProvider.tsx
frontend/src/hook/: useAutoRefreshToken.ts  useTools.ts
frontend/src/hook/auth/: useAkun.ts
frontend/src/types/: next-auth.d.ts
