[package]
name = "my-rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-web-httpauth = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11.6"
bcrypt = "0.17.0"
log = "0.4"
rand = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
time = "0.3"
futures-util = "0.3"
